--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "lint:cli": "prettier --config='.prettierrc' --write",
+    "lint:tsx": "npm run lint:cli '**/*.tsx'",
+    "lint:ts": "npm run lint:cli 'src/**/*.ts'",
+    "lint:css": "npm run lint:cli 'src/**/*.css'",
+    "lint": "npm run lint:tsx && npm run lint:ts && npm run lint:css",
+    "predeploy": "npm run lint && npm run build",
+    "deploy": "gh-pages --dist build --branch master --message 'Publish react-app'"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "prettier": "^2.2.1"
   }
 }
