--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
   "name": "breaking-bad",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adityaa30.github.io/breaking-bad/",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.2",
-    "@types/jest": "^26.0.19",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^12.19.9",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -51,6 +46,13 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^12.19.9",
+    "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.10",
+    "react-scripts": "4.0.1",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1"
   }
 }
